--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
   <title>Template</title>
 </head>
 <body>
+  <h1>Go to Work</h1>
+  <hr />
+  <div class="container">
+    <button class="btn-success" id="roll">Roll</button>
+  </div>
+  <h1>Results</h1>
+  <hr />
+  <div class="container">
+    <h3><div id="show-state"></div></h3>
+  </div>
 
 </body>
 </html>
