--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Left4Dead Office</title>
 </head>
 <body>
   <h1>Go to Work</h1>
@@ -16,6 +16,8 @@
   <hr />
   <div class="container">
     <h3><div id="show-state"></div></h3>
+    <h3><div id="willToLive"></div></h3>
+    <h3><div id="turn"></div></h3>
   </div>
 
 </body>
