stop roll when turn reaches 8

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <h1>Results</h1>
   <hr />
   <div class="container">
-    <h3><div id="show-state"></div></h3>
+    <!-- <h3><div id="show-state"></div></h3> -->
     <h3><div id="willToLive"></div></h3>
     <h3><div id="turn"></div></h3>
   </div>
