add game status

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- <h3><div id="show-state"></div></h3> -->
     <h3><div id="willToLive"></div></h3>
     <h3><div id="turn"></div></h3>
+    <h3><div id="gameStatus"></div></h3>
   </div>
 
 </body>
