--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <h3><div id="willToLive"></div></h3>
     <h3><div id="turn"></div></h3>
     <h3><div id="gameStatus"></div></h3>
+    <button class="btn-success" type="submit" id="playAgain">Play Again</button>
   </div>
 
 </body>
