--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,46 @@
 
     <div class="results-container">
       <div class="willToLiveContainer">
-        <h3>
-          <div id="willToLive"></div>
-        </h3>
+        <h2>
+          Will To Live: <div id="willToLive">5</div>
+        </h2>
       </div>
       <div class="timeContainer">
         <h3>
-          <div id="turn"></div>
+          Hours Worked:<div id="turn">0</div>
         </h3>
       </div>
     </div>
 
     <div class="heroContainer">
+      <div class="eventContainer">
+          <h4>
+            <div id="eventStatus"></div>
+          </h4>
+      </div>
       <div class="employeeContainer">
         <img src = "img/finalworker.png">
       </div>
-      <div class="diceContainer">
-        <img src = "img/finalworker.png">
+      <div class="diceContainerimg">
+        <img src = "img/dice.gif">
+      </div>
+      <div class="diceToggle1">
+        <img src = "img/finaldice1.png">
+      </div>
+      <div class="diceToggle2">
+        <img src = "img/finaldice2.png">
+      </div>
+      <div class="diceToggle3">
+        <img src = "img/finaldice3.png">
+      </div>
+      <div class="diceToggle4">
+        <img src = "img/finaldice4.png">
+      </div>
+      <div class="diceToggle5">
+        <img src = "img/finaldice5.png">
+      </div>
+      <div class="diceToggle6">
+        <img src = "img/finaldice6.png">
       </div>
     </div>
 
@@ -43,13 +66,13 @@
       <div class="statusContainer">
         <h3>
           <div id="gameStatus"></div>
-        </h3>
-        <button class="btn-success" type="submit" id="playAgain">Play Again</button>
+        </h3><br>
+        <button class="btn-outline-dark" type="submit" id="playAgain">Play Again</button>
       </div>
     </div>
 
     <div class="button-container">
-      <button class="btn-success" id="roll">Roll</button>
+      <button class="btn-outline-dark btn-lg" id="roll">Roll</button>
     </div>
   </div>
 </body>
