--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Left4Dead Office</title>
+  <title>Paper Pusher</title>
 </head>
 
 <body>
@@ -23,9 +23,9 @@
         </h2>
       </div>
       <div class="timeContainer">
-        <h3>
+        <h2>
           Hours Worked:<div id="turn">0</div>
-        </h3>
+        </h2>
       </div>
     </div>
 
@@ -64,9 +64,15 @@
 
     <div class="statusContainerParent">
       <div class="statusContainer">
-        <h3>
+        <h2>
           <div id="gameStatus"></div>
-        </h3><br>
+        <h2>
+        <br>
+        <h4>
+          <div id="gameStatus2"></div>
+          <br>
+          <div id="gameStatus3"></div>
+        </h4><br>
         <button class="btn-outline-dark" type="submit" id="playAgain">Play Again</button>
       </div>
     </div>
