--- a/src/index.html
+++ b/src/index.html
@@ -64,21 +64,21 @@
 
     <div class="statusContainerParent">
       <div class="statusContainer">
-        <h2>
+        <h1>
           <div id="gameStatus"></div>
-        <h2>
+        <h1>
         <br>
         <h4>
           <div id="gameStatus2"></div>
           <br>
           <div id="gameStatus3"></div>
         </h4><br>
-        <button class="btn-outline-dark" type="submit" id="playAgain">Play Again</button>
+        <button class="btn-outline-dark btn-lg" type="submit" id="playAgain">Start New Day</button>
       </div>
     </div>
 
     <div class="button-container">
-      <button class="btn-outline-dark btn-lg" id="roll">Roll</button>
+      <button class="btn-outline-dark btn-lg" id="roll">Work</button>
     </div>
   </div>
 </body>
